syntax="proto3";

option java_multiple_files=true;
option java_package="in.rk.bank.models";

package models;

message BalanceWithdrawResponse
{
  int32 amount=1;
}